<resources>
    <string name="app_name">Formulario</string>
    <string name="nombre_completo">Nombre Completo</string>
    <string name="telefono">Telefono</string>
    <string name="email">Email</string>
    <string name="descripcion_contacto">Descripcion contacto</string>
    <string name="siguiente">Siguiente</string>
    <string name="confirmar_datos">Confirmar Datos</string>
    <string name="descripcion">Descripcion: </string>
    <string name="editar_datos">Editar Datos</string>
</resources>