<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_margin="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_datos"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            />

        <TextView
            android:textSize="21sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre" />

        <TextView
            android:textSize="21sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvFecha" />

        <TextView
            android:textSize="21sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefono" />

        <TextView
            android:textSize="21sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:textSize="21sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/descripcion" />

            <TextView
                android:textSize="21sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescripcion" />
        </LinearLayout>

        <Button
            android:id="@+id/boton_editar"
            android:layout_marginTop="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:padding="7sp"
            android:text="@string/editar_datos" />
    </LinearLayout>
</RelativeLayout>